# portfolio-2025-api

./: .dockerignore  .env_example  .gitignore  Cargo.toml  Dockerfile  Dockerfile_2  Dockerfile_3  Insomnia.yaml  Insomnia_2025-09-02.yaml  Insomnia_Collection.yaml  Insomnia_Environments.yaml  README.md
.github/: README for Copilot.md  copilot-instructions.md
.sqlx/: query-02bbf20295e98012e7a3556294854bf439d688723b5fabb510ecb7b9e63186ba.json  query-0316a7f657669aa5af1f5e2a004b2706d87dd6636aad9b486e1d9aeb338edf49.json  query-0abe74bd14341a33e58b19615dbfc7be991b1225937a8ab041fb6d1dcaf063ee.json  query-1d71db18c8a1d78cceb98acdbe8d9f6573bd14c0ea23d5b8083dd2fc66d08ac8.json  query-1e2fd690cf3907e3bf80eb867b191ed7f3eb16eac6296d92bd885ae42e751e49.json  query-2da5ce980bf733a0e04b3b7e8a873cf47463f8c9c9122c0cf3a569fb957bf6d1.json  query-3d0eb1739cca0cba18cfce08766f77d05d5f3bd2217cae136e136593ac7387cb.json  query-407a33e7a58ee353898d1d58ec73d40e82eb17dffb80bd68c68750787a446f6e.json  query-44a58d00bf8d918b871d5f6372a702da485d2bd94c7920f861501a4750ad1557.json  query-46131126a3dabf2947e32c5418bc19cd363ab88543f476665a975ab36c130aad.json  query-479b94b6ce2c8fcebef02079143ae1b75268bb37b07d34277cbb174448aaedce.json  query-4aa34af9a6e7de8a1168d1bf1467a2fa123b76091d995979912e3b4a226ec082.json  query-547fe22880eb58d0f4ff3dce3b200599b6c5581494a1840f74939de97dae6689.json  query-5993d4c977abd29a10f01664e3f7dff7c9dd04e2052e86996d60b6ae0e968893.json  query-59a9cea918b12b3558c635d13cc3ec91b8b774b3b17d28b391521b2424b2cdb9.json  query-5f9482136774ae993e855e5c2f673f6553268641d673a0e2d9039cd92815ecf2.json  (+27 more)
devop/: .env_example  (+9 more)
(+113 files in other folders)
