[package]
name = "api_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
# tokio + native-tls
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "migrate" ] }
# Add CORS support
tower-http = { version = "0.6.6", features = ["cors"] }


#[dev-dependencies]
#sqlx-cli = { version = "0.8.6", features = ["postgres"] }
