[package]
name = "portfolio_api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["full"] }
# tokio + native-tls
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "postgres", "migrate", "time" ] }
# Add CORS support
tower-http = { version = "0.6.6", features = ["cors"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
rand = "0.9.2"
hex = "0.4.3"
chrono = "0.4.42"
argon2 = "0.5.3"
once_cell = "1.21.3"

#[dev-dependencies]
#sqlx-cli = { version = "0.8.6", features = ["postgres"] }
